--- a/_locales/zh/colorbit-strings.json
+++ b/_locales/zh/colorbit-strings.json
@@ -60,34 +60,34 @@
   "ColorIcon.Down|block": "下（南）",
   "ColorIcon.Left|block": "左（西）",
   "ColorIcon.Right|block": "右（东）",
-  "colorbit.Strip.showColorIcon|block": "%colorbit_51bit|显示 ColorBit 图标： %myicon|且颜色为 %rgb=colorbit_colors",
-  "colorbit.Strip.showColor|block": "%colorbit_51bit|显示颜色%rgb=colorbit_colors",
-  "colorbit.Strip.setMultiColor|block": "%colorbit_51bit|设置每个灯为多彩色: %yes",
-  "colorbit.Strip.showRainbow|block": "%colorbit_51bit|显示彩虹特效 （色相）从%startHue|到%endHue",
-  "colorbit.Strip.showBarGraph|block": "%colorbit_51bit|显示柱状图 值%value|最大值%high",
-  "colorbit.Strip.setPixelColor|block": "%colorbit_51bit|设置颜色 像素%pixeloffset|为 %rgb=colorbit_colors",
-  "colorbit.Strip.setMatrixWidth|block": "%colorbit_51bit|设置颜色宽度 %width",
-  "colorbit.Strip.setMatrixColor|block": "%colorbit_51bit|设置矩阵颜色 在 x %x|y %y|为 %rgb=colorbit_colors",
-  "colorbit.Strip.showIntColor|block": "%colorbit_51bit|显示 ColorBit 数字： %input|且颜色为 %rgb=colorbit_colors",
-  "colorbit.Strip.showStringColor|block": "%colorbit_51bit|显示 ColorBit 字符串： %input|且颜色为 %rgb=colorbit_colors",
-  "colorbit.Strip.showScrollStringColor|block": "%colorbit_51bit|显示 ColorBit 滚动字符串： %input|且颜色为 %rgb=colorbit_colors",
-  "colorbit.Strip.showScrollIntColor|block": "%colorbit_51bit|显示 ColorBit 滚动数字： %input|且颜色为 %rgb=colorbit_colors",
-  "colorbit.Strip.setPixelWhiteLED|block": "%colorbit_51bit|设置白灯(RGB+W) 像素%pixeloffset|为 %white",
-  "colorbit.Strip.drawColorBit|block": "%colorbit_51bit|绘图ColorBit 在 x %x|y %y|为 %rgb=colorbit_colors",
-  "colorbit.Strip.show|block": "%colorbit_51bit|刷新显示",
-  "colorbit.Strip.clear|block": "%colorbit_51bit|清除显示",
-  "colorbit.Strip.length|block": "%colorbit_51bit|LED的数目",
-  "colorbit.Strip.setBrightness|block": "%colorbit_51bit|设置亮度为 %brightness",
-  "colorbit.Strip.easeBrightness|block": "%colorbit_51bit|减小亮度",
-  "colorbit.Strip.range|block": "%colorbit_51bit| 从像素%start|开始 长度%length|颗LED",
-  "colorbit.Strip.shift|block": "%colorbit_51bit|移动像素 偏移量%offset",
-  "colorbit.Strip.rotate|block": "%colorbit_51bit|循环像素 偏移量%offset",
-  "colorbit.Strip.power|block": "%colorbit_51bit| 电流(mA)",
-  "colorbit.Strip.showWhaleySansFontColor|block": "%colorbit_51bit|显示 ColorBit WhaleySansFont 数字： %dat|且字体颜色为 %rgbFront=colorbit_colors|且背景颜色为 %rgbBackground=colorbit_colors",
-  "colorbit.initColorBit|block": "ColorBit leds 在引脚： %pin| 且模式为 %mode",
-  "colorbit.hsl|block": "色相 %h|饱和度 %s|亮度 %l",
-  "colorbit.setMatrixWidth|block": "%colorbit_51bit|设置矩阵宽度 %width",
-  "colorbit.setMatrixColor|block": "%string|设置像素点 （坐标）x %x|y %y|颜色 %rgb=colorbit_colors",
-  "colorbit.create|block": "引脚%pin|初始化灯带|%numleds|颗LED（模式%mode|）",
-  "colorbit.rgb|block": "RGB（红%red|绿%green|蓝%blue|）"
+  "ledmatrixxy.Strip.showColorIcon|block": "%colorbit_51bit|显示 ColorBit 图标： %myicon|且颜色为 %rgb=colorbit_colors",
+  "ledmatrixxy.Strip.showColor|block": "%colorbit_51bit|显示颜色%rgb=colorbit_colors",
+  "ledmatrixxy.Strip.setMultiColor|block": "%colorbit_51bit|设置每个灯为多彩色: %yes",
+  "ledmatrixxy.Strip.showRainbow|block": "%colorbit_51bit|显示彩虹特效 （色相）从%startHue|到%endHue",
+  "ledmatrixxy.Strip.showBarGraph|block": "%colorbit_51bit|显示柱状图 值%value|最大值%high",
+  "ledmatrixxy.Strip.setPixelColor|block": "%colorbit_51bit|设置颜色 像素%pixeloffset|为 %rgb=colorbit_colors",
+  "ledmatrixxy.Strip.setMatrixWidth|block": "%colorbit_51bit|设置颜色宽度 %width",
+  "ledmatrixxy.Strip.setMatrixColor|block": "%colorbit_51bit|设置矩阵颜色 在 x %x|y %y|为 %rgb=colorbit_colors",
+  "ledmatrixxy.Strip.showIntColor|block": "%colorbit_51bit|显示 ColorBit 数字： %input|且颜色为 %rgb=colorbit_colors",
+  "ledmatrixxy.Strip.showStringColor|block": "%colorbit_51bit|显示 ColorBit 字符串： %input|且颜色为 %rgb=colorbit_colors",
+  "ledmatrixxy.Strip.showScrollStringColor|block": "%colorbit_51bit|显示 ColorBit 滚动字符串： %input|且颜色为 %rgb=colorbit_colors",
+  "ledmatrixxy.Strip.showScrollIntColor|block": "%colorbit_51bit|显示 ColorBit 滚动数字： %input|且颜色为 %rgb=colorbit_colors",
+  "ledmatrixxy.Strip.setPixelWhiteLED|block": "%colorbit_51bit|设置白灯(RGB+W) 像素%pixeloffset|为 %white",
+  "ledmatrixxy.Strip.drawColorBit|block": "%colorbit_51bit|绘图ColorBit 在 x %x|y %y|为 %rgb=colorbit_colors",
+  "ledmatrixxy.Strip.show|block": "%colorbit_51bit|刷新显示",
+  "ledmatrixxy.Strip.clear|block": "%colorbit_51bit|清除显示",
+  "ledmatrixxy.Strip.length|block": "%colorbit_51bit|LED的数目",
+  "ledmatrixxy.Strip.setBrightness|block": "%colorbit_51bit|设置亮度为 %brightness",
+  "ledmatrixxy.Strip.easeBrightness|block": "%colorbit_51bit|减小亮度",
+  "ledmatrixxy.Strip.range|block": "%colorbit_51bit| 从像素%start|开始 长度%length|颗LED",
+  "ledmatrixxy.Strip.shift|block": "%colorbit_51bit|移动像素 偏移量%offset",
+  "ledmatrixxy.Strip.rotate|block": "%colorbit_51bit|循环像素 偏移量%offset",
+  "ledmatrixxy.Strip.power|block": "%colorbit_51bit| 电流(mA)",
+  "ledmatrixxy.Strip.showWhaleySansFontColor|block": "%colorbit_51bit|显示 ColorBit WhaleySansFont 数字： %dat|且字体颜色为 %rgbFront=colorbit_colors|且背景颜色为 %rgbBackground=colorbit_colors",
+  "ledmatrixxy.initColorBit|block": "ColorBit leds 在引脚： %pin| 且模式为 %mode",
+  "ledmatrixxy.hsl|block": "色相 %h|饱和度 %s|亮度 %l",
+  "ledmatrixxy.setMatrixWidth|block": "%colorbit_51bit|设置矩阵宽度 %width",
+  "ledmatrixxy.setMatrixColor|block": "%string|设置像素点 （坐标）x %x|y %y|颜色 %rgb=colorbit_colors",
+  "ledmatrixxy.create|block": "引脚%pin|初始化灯带|%numleds|颗LED（模式%mode|）",
+  "ledmatrixxy.rgb|block": "RGB（红%red|绿%green|蓝%blue|）"
 }
